<resources>
<!--app-->
    <string name="app_name">JobQues</string>
    <string name="web_client_id">132913091365-c5jbbbs6ls1g0nvusbs6j588t55rpma3.apps.googleusercontent.com</string>

<!--login page 1-->
    <string name="login1">Find Your Dream Job</string>
    <string name="login2">Carilah pekerjaan idaman kamu dengan aplikasi kami</string>
    <string name="nextBtn">Next</string>
    <string name="loginImage1">Login Image 1</string>

<!--login page 2-->
    <string name="backBtn">Back</string>
    <string name="signInGoogleBtn">Sign up with Google</string>
    <string name="googlelogo">Google Logo</string>
    <string name="signupBtn">Sign Up</string>
    <string name="signinBtn">Sign In</string>

<!--Sign Up / Sign In-->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Confirm Password</string>
    <string name="usernameoremail">Username/Email</string>
    <string name="signIn">Already have an account? Sign In</string>
    <string name="signUp">Dont have an account? Sign Up</string>


<!--home-->
    <string name="logout">logout</string>

<!--testing-->
    <string name="test">Test</string>

</resources>