<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/loginBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/loginLogo2"
        android:layout_width="200dp"
        android:layout_height="214dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logojq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBack2" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/jobques"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLogo2" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:passwordToggleEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:hint="@string/repassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password1" />

    <Button
        android:id="@+id/signUpBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupBtn"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repassword" />
</androidx.constraintlayout.widget.ConstraintLayout>